--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Countdown Timer</title>
-  <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+  <title>Modern Countdown Timer</title>
+  <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="https://fav.farm/🔥" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <div class="timer">
@@ -21,6 +22,7 @@
       </form>
     </div>
     <div class="display">
+      <div class="display__circle"></div>
       <h1 class="display__time-left"></h1>
       <p class="display__end-time"></p>
     </div>
